# Portfolio

./: .dockerignore  .env  .gitignore  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt
deployment/: deployment.sh
deployment_aws/: deployment.sh  get_repo.sh
docker_config/: Dockerfile  db_entrypoint.sh  entrypoint.sh  env.dev  env.prod
frontend/: package.json
frontend/first_fe_app/: package.json  webpack.config.js
frontend/first_fe_app/about_me/: about_me.js
frontend/first_fe_app/base/: baseStyles.js  baseUrls.js  styledComponents.js  utils.js
frontend/first_fe_app/login/: currentUserData.js  loginContext.js  loginPopup.js
frontend/first_fe_app/navbar/: navbar.js  styledComponents.js
frontend/first_fe_app/privacy_policy/: privacyPolicy.js  privacy_policy.html
frontend/first_fe_app/projects/: projects.js
frontend/first_fe_app/skill_table/: commentForms.js  endlessPagination.js  genericButton.js  sizeTracker.js  skillComments.js  skillPopup.js  skillTable.js  (+1 more)
nginx/: Dockerfile  dev.dockerfile  nginx-prod.conf  nginx.conf  prod.dockerfile
portfolio/: db_password.txt  package.json  pytest.ini
portfolio/accounts/: admin.py  models.py  urls.py  views.py
portfolio/base/: views.py
portfolio/frontend/: package-lock.json  package.json
portfolio/main_app/: admin.py  api_urls.py  models.py  urls.py  views.py
portfolio/portfolio/: settings.py  urls.py
portfolio/tests/: pytest.ini
portfolio/utils/: parsers.py  renderers.py
shell_scripts/: connect_container.sh  logs.sh
(+64 files in other folders)
